# pico-rc

./: .gitignore  CMakeLists.txt  readme.txt
build1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build1/pico-sdk/: cmake_install.cmake
build1/pico-sdk/docs/: cmake_install.cmake
build1/pico-sdk/src/: cmake_install.cmake
build1/pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
build1/pico-sdk/src/common/boot_picoboot_headers/: cmake_install.cmake
build1/pico-sdk/src/common/boot_uf2_headers/: cmake_install.cmake
build1/pico-sdk/src/common/hardware_claim/: cmake_install.cmake
build1/pico-sdk/src/common/pico_base_headers/: cmake_install.cmake
build1/pico-sdk/tools/: cmake_install.cmake
build1/pioasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
build1/src/: cmake_install.cmake  pico_rc.dis  pico_rc.elf  pico_rc.elf.map  pico_rc.hex  pico_rc.uf2
build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build2/pico-sdk/: cmake_install.cmake
build2/pico-sdk/docs/: cmake_install.cmake
build2/pico-sdk/src/: cmake_install.cmake
build2/pico-sdk/tools/: cmake_install.cmake
build2/pioasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
build2/pioasm-install/pioasm/: pioasmTargets-debug.cmake
build2/src/: cmake_install.cmake  pico_rc.dis  pico_rc.elf  pico_rc.elf.map  pico_rc.hex  pico_rc.uf2
src/: CMakeLists.txt  btclient.c  btclient.h  btstack_config.h  pico-rc.c
(+199 files in other folders)
